fix bug where blackboard overlaps sidebar

--- a/client/stylesheets/app/_app.sass
+++ b/client/stylesheets/app/_app.sass
@@ -34,6 +34,7 @@ main.app-primary
   align-self: auto
   position: relative
   background-color: #262722
+  overflow: hidden
 
   +below(480px)
     display: block
